@@ -1,5 +1,6 @@
 Oct 6, 2008 - John Schember <john@nachtimwald.com>
 
+* Remove error message than can cause a seg fault.
 * Clean up user displayed messages.
 * Clean up strings.
 * Download error message more meaningful.
